adapter-zigate test \n коряво, но как есть

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,10 @@
         "outDir": "dist",
         "baseUrl": ".",
         "resolveJsonModule": true,
+        "allowJs": true
     },
     "include": [
+        "src/**/*.js",
         "src/**/*.ts",
         "src/**/*.json"
     ],
